[package]
name = "rt_mutex"
version = "0.1.0"
edition = "2021"

[dependencies]
boot = { git = "ssh://git@github.com/shilei-massclouds/boot.git" }
config = { git = "ssh://git@github.com/shilei-massclouds/config.git" }
axtype = { git = "ssh://git@github.com/shilei-massclouds/axtype.git" }
mutex = { git = "ssh://git@github.com/shilei-massclouds/mutex.git" }
axalloc = { git = "ssh://git@github.com/shilei-massclouds/axalloc.git" }
axlog = { git = "ssh://git@github.com/shilei-massclouds/axlog.git" }
hal_base = { git = "ssh://git@github.com/shilei-massclouds/hal_base.git" }
taskctx = { git = "ssh://git@github.com/shilei-massclouds/taskctx.git" }
run_queue = { git = "ssh://git@github.com/shilei-massclouds/run_queue.git" }
